<resources>
    <string name="app_name">Inventory Sepatu</string>
    <string name="item_detail_fragment_title">Item Details</string>
    <string name="terjual">Terjual</string>
    <string name="tambah_sepatu">Tambah Sepatu</string>
    <string name="hapus">Hapus</string>
    <string name="masukan_model_pesanan">Masukan Model Pesanan</string>
    <string name="harga_produk">Harga Produk</string>
    <string name="model_produk">Model Produk</string>
    <string name="jumlah_stok">Jumlah Stok</string>
    <string name="simpan">Simpan</string>
    <string name="model_sepatu">Model Sepatu</string>
    <string name="harga">Harga</string>
    <string name="stok_produk">Stok Produk</string>
    <string name="tambah_produk">Tambah Produk</string>
    <string name="jumlah">Jumlah</string>
    <string name="edit_fragment_title">Tambah</string>
    <string name="delete_question">Hapus</string>
    <string name="no">no</string>
    <string name="yes">yes</string>
    <string name="currency_symbol">RP</string>
    <string name="add_fragment_title">Judul</string>
    <string name="tanggal">Tanggal</string>
    <string name="item_time">Tanggal Masuk</string>
    <string name="itemTime">Tanggal Masuk</string>
    <string name="item_tanggal">Tanggal</string>
    <string name="stok">Stok</string>
    <string name="Detail_sepatu">Detail Sepatu</string>

</resources>